# fastapi_ev

./: .gitignore  main.py  main01.py  pyproject.toml
controller/: Test01Controller.py  Test02Controller.py  Test03Controller.py  Test04Controller.py  Test05Controller.py
entity/: IsDeleteEnum.py  R.py  User.py
service/: UserService.py
正式项目结构/: main.py
