[project]
name = "fastapi_dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiomysql>=0.3.2",
    "fastapi[standard]==0.115.12",
    "loguru>=0.7.3",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]==0.34.2",
]
